<resources>
    <string name="app_name">mygroup</string>
    <string name="textgrp">My Group</string>
    <string name="todo">TODO</string>
    <string name="headerlogin">LOGIN</string>
    <string name="contactusgo">GO</string>
    <string name="contactpass">password</string>
    <string name="countactususer">username</string>
    <string name="contact_us_header">CONTACT US</string>
    <string name="enter_email_contectus">Enter Email</string>
    <string name="enter_name_contactus">Enter Name</string>
    <string name="any_query_contactus">Any Query</string>
    <string name="send_contactus">Send</string>
    <string name="password_login">password</string>
    <string name="password2">password</string>
    <string name="password">password</string>
    <string name="about_us">About us</string>
    <string name="about">About Us</string>
    <string name="tdo">TODO</string>
    <string name="bhavy">Bhavy Soliya</string>
    <string name="en">18SOECE11057</string>
    <string name="c">7874406430</string>
    <string name="enroll">18SOECE11043</string>
    <string name="cont">6355477607</string>
    <string name="name">Dharmesh Daki</string>
    <string name="enrollment">18SOECE11057</string>
    <string name="td">TODO</string>
    <string name="kru">Krushali Patoliya</string>
    <string name="contact">8980354712</string>
    <string name="tod">TODO</string>
    <string name="contact_us">CONTACT US</string>
    <string name="aboutu">ABOUT</string>

</resources>